--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ericjcili/rosnbox.git"
@@ -17,6 +16,7 @@
   },
   "homepage": "https://github.com/ericjcili/rosnbox#readme",
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "express": "^4.18.1",
     "mysql2": "^2.3.3"
   },
